# mz_parquet

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  bench.py  demo.py  pyproject.toml
.github/workflows/: build.yml  docker.yml
.github/workflows/upload_artifacts/: action.yml
src/: main.rs  mzml.rs  reader.rs  write_long.rs  write_wide.rs  writer.rs
